--- a/Client/.flowconfig
+++ b/Client/.flowconfig
@@ -2,6 +2,7 @@
 
 # We fork some components by platform.
 .*/*.web.js
+.*/*.ios.js
 .*/*.android.js
 
 # Some modules have their own node_modules with overlap
